# SVOJAK-HW-edition

./: .gitignore  package-lock.json  todo
src/: gameplay.html  index.html  main.js  styles.css
src-tauri/: Cargo.toml  Rocket.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: dto.rs  gameplay.rs  mapper.rs  setup.rs
src-tauri/src/api/controller/: gameplay.rs  startup.rs
src-tauri/src/api/controller/startup/: hub.rs  hw_hub.rs  mod.rs
src-tauri/src/core/: game_entities.rs  game_logic.rs  hub_manager.rs
src-tauri/src/game_pack/: game_pack_entites.rs  game_pack_loader.rs  pack_content_dto.rs  pack_content_entities.rs  pack_content_loader.rs  pack_dto.rs  pack_entities.rs  pack_loader.rs  translator.rs
src-tauri/src/game_process/: game_info.rs  game_processor.rs
src-tauri/src/hub_comm/common/: hub_api.rs
src-tauri/src/hub_comm/hw/: hw_hub_manager.rs
src-tauri/src/hub_comm/hw/internal/: api_types.rs  byte_handler.rs  hub_protocol_io_handler.rs
src-tauri/src/hub_comm/hw/virtual_hw_hub/: hub_mock.rs  mod.rs
src-tauri/src/hub_comm/web/: web_hub.rs  web_hub_manager.rs
src-tauri/src/hub_comm/web/web_hub/: internal_api.rs  player_api.rs  server.rs
src-tauri/src/hub_comm/web/web_server/: internal_api.rs  player_api.rs  server.rs
src-tauri/src/hw_comm/: api.rs  api_types.rs  byte_handler.rs  hub_mock.rs  hub_protocol_io_handler.rs
src-tauri/src/hw_comm/communication/: entities.rs  hub_comm.rs  response_handler.rs
src-tauri/src/hw_comm/uart_adapter/: byte_handler.rs  frame_handler.rs  hub_protocol_io_handler.rs
src-tauri/src/hw_comm/virtual_hw_hub/: hub_mock.rs  mod.rs
src-tauri/static/: index.html  root.css  script.js  style.css
src-tauri/tests/: hub_protocol_io_handler.rs
src/modal/: settings-modal.css  settings.css
src/scripts/: back-end-com.js  gameplay.js  index.js  pig-in-poke-modal.js  utils.js
src/scripts/gameplay/: gameplay-service.js  setup.js
src/scripts/gameplay/modal/: auction-modal.js  pig-in-poke-modal.js  round-stats-modal.js
src/scripts/index/: index.js
src/scripts/index/modal/: hub-debug-modal.js  pack-info-modal.js  settings-modal.js
src/scripts/modal/: modal-common.js  pack-info-modal.js  settings-modal.js
src/scripts/service/: back-end-com.js  modal-common.js  utils.js
src/styles/: gameplay.css  general.css  index.css  main.css  root.css
src/styles/modal/: auction-modal.css  hub-debug-modal.css  modal-common.css  pack-info-modal.css  pig-in-poke-modal.css  settings-modal.css  stats-round-modal.css
