[package]
name = "svoyak-tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1.3", features = ["devtools", "dialog-open", "fs-all", "protocol-all", "shell-open"] }

# Pack parsing
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
tempfile = "3.2"
zip = "0.6.6"
urlencoding = "2.1.2"
unic-normal = "0.9.0"

# Hub communication
serialport = "4.2.0"
rgb = "0.8"

# Game context holding
lazy_static = "1.4.0"

# Misc
rand = "0.8"

# Infrastructure
log = "0.4.0"
env_logger = "0.10.0"
error-stack = "0.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
